--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Portfólio de João Valter Kshesek, desenvolvedor especializado em ReactJS, Next.js e TypeScript."
+      content="Portfólio | João Valter Kshesek. Como Desenvolvedor Front-End, meu foco é na criação de aplicações..."
     />
     <meta
       name="keywords"
       content="João Valter Kshesek, portfólio, frontend, React, Next.js, TypeScript"
     />
     <meta name="author" content="João Valter Kshesek" />
-    <title>João Valter Kshesek | Portfolio</title>
+    <title>Portfolio | João Valter Kshesek</title>
   </head>
   <body>
     <div id="root"></div>
